# j4f

./: .gitignore  COLAB_QUICKSTART.md  OFFICIAL_AMEM_GATE.md  README.md  pyproject.toml  requirements.txt
aamem_lab/: __init__.py  amem_write_trace_runner.py  answer_metrics.py  answerers.py  baselines.py  datasets.py  debug_llm_gate_output.py  evaluation.py  gates.py  geometry.py  judges.py  metrics.py  model_presets.py  official_amem_gate_runner.py  official_amem_prefix_gate_runner.py  packets.py  paper_metrics.py  phase2_answer_runner.py  phase3_stale_runner.py  retrieval.py  runner.py  schemas.py  serialization.py  sota_registry.py  stale_suite.py  text.py
aamem_lab/sota_wrappers/: __init__.py  official_amem.py
configs/: phase0_actmem.json  phase0_locomo.json  phase2_answer_actmem_fast.json  phase3_stale_fast.json
notebooks/: amem_write_trace_analysis.ipynb  colab_pull_and_run.ipynb  phase_runner.ipynb
scripts/: print_official_amem_gate_summary.py  run_phase0.py  run_phase2_answer.py  run_phase3_stale.py  show_model_presets.py  show_sota_registry.py
slides/: sac_mem_a_star_vision_vi.md  sac_mem_detailed_explainer_vi.md
tests/: smoke_test.py  test_amem_write_trace.py
