[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aamem-lab"
version = "0.1.0"
description = "Applicability-aware memory agent experiments."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["aamem_lab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
